# benwis_leptos

./: .dockerignore  .env  .env_template  .gitignore  App.db  Cargo.toml  Dockerfile  README.md  TODO.md  Todos.db  flake-debugging.nix  flake.nix  flake_builddeps.nix  flake_newer.nix  flake_newer_example.nix  fly.toml  input.css  package-lock.json  posts.csv  posts2.csv  tailwind.config.js  test.toml
.cargo/: config.default  config.toml
.github/workflows/: deploy.yml
.helix/: languages.toml
app/: Cargo.toml
app/src/: app.rs  error_template.rs  errors.rs  fallback.rs  lib.rs  state.rs
app/src/components/: dark_mode_toggle.rs  feature_card.rs  footer.rs  mod.rs  nav.rs  portfolio_card.rs
app/src/functions/: dark_mode.rs  post.rs  user.rs
app/src/layouts/: default.rs  home.rs
app/src/models/: post.rs  user.rs
app/src/providers/: color_scheme.rs  mod.rs
app/src/routes/: about.rs  index.rs  mod.rs  nedry.rs  rss.rs
app/src/routes/auth/: login.rs
app/src/routes/blog/: add.rs  edit.rs  index.rs  mod.rs  post.rs
benchmarks/drill/: simple-remix.yml  simple.yml
benchmarks/k6s/: simple.js
benchmarks/k6s/docker/: fly.toml
benwis_server/: Cargo.toml
benwis_server/src/: fallback.rs  main.rs  rss.rs  state.rs  telemetry.rs
cargo-timings/5800/benwis_leptos_clean_1/: cargo-timing-20231017T181241Z.html
cargo-timings/5800/benwis_leptos_clean_2/: cargo-timing-20231017T181453Z.html
cargo-timings/5800/benwis_leptos_clean_3/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_clean_1/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_clean_2/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_clean_3/: cargo-timing-20231021T190458Z.html
cargo-timings/5950x/benwis_leptos_clean_incremental_2/: cargo-timing-20231021T191243Z.html  cargo-timing-20231021T192059Z.html
cargo-timings/5950x/benwis_leptos_clean_incremental_3/: cargo-timing-20231021T192201Z.html  cargo-timing-20231021T192241Z.html
cargo-timings/5950x/benwis_leptos_combined_clean_1/: cargo-timing-20231021T215211Z.html  cargo-timing-20231021T215248Z.html  cargo-timing-20231021T215449Z.html
cargo-timings/5950x/benwis_leptos_combined_clean_2/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_combined_incremental_1/: cargo-timing-20231021T220039Z.html  cargo-timing-20231021T220634Z.html
cargo-timings/5950x/benwis_leptos_combined_incremental_2/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_combined_incremental_3/: cargo-timing-20231021T220756Z.html
cargo-timings/5950x/benwis_leptos_mold_clean_1/: cargo-timing-20231021T234512Z.html
cargo-timings/5950x/benwis_leptos_mold_clean_2/: cargo-timing-20231021T234627Z.html
cargo-timings/5950x/benwis_leptos_mold_clean_3/: cargo-timing-20231021T234727Z.html
cargo-timings/5950x/benwis_leptos_mold_incremental_2/: cargo-timing-20231021T215111Z.html  cargo-timing-20231021T215256Z.html
cargo-timings/5950x/benwis_leptos_mold_incremental_3/: cargo-timing-20231021T215333Z.html
cargo-timings/5950x/benwis_leptos_o3_1/: cargo-timing-20231021T200225Z.html
cargo-timings/5950x/benwis_leptos_o3_2/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_o3_3/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_o3_incremental_1/: cargo-timing-20231021T202319Z.html
cargo-timings/5950x/benwis_leptos_o3_incremental_2/: cargo-timing.html
cargo-timings/5950x/benwis_leptos_o3_incremental_3/: cargo-timing-20231021T202311Z.html  cargo-timing-20231021T202503Z.html
certs/: Amazon_RSA_2048_M02.pem
compile_test/: clean.json  clean_cranelift.json  clean_mold.json  clean_mold_cranelift.json  clean_mold_o3.json  clean_mold_o3_cranelift.json  clean_o3.json  clean_o3_cranelift.json  incremental_cranelift.json  incremental_mold.json  incremental_mold_cranelift.json  incremental_mold_o3.json  incremental_mold_o3_cranelift.json  incremental_o3.json  incremental_o3_cranelift.json
compile_time_benchmarks/: clean.json  clean_all.json  clean_all.md  clean_cranelift.json  clean_cranelift.md  clean_cranelift_mold.json  clean_cranelift_mold.md  clean_cranelift_o3.json  clean_cranelift_o3.md  clean_mold.json  clean_mold.md  clean_mold_o3.json  clean_mold_o3.md  clean_o3.json  clean_o3.md  incremental_all.json  incremental_all.md  incremental_clean.json  incremental_clean.md  incremental_cranelift.json  incremental_cranelift.md  incremental_cranelift_mold.json  incremental_cranelift_mold.md  incremental_cranelift_o3.json  incremental_cranelift_o3.md  incremental_mold.json  incremental_mold.md  incremental_mold_o3.json  incremental_mold_o3.md  incremental_o3.json  incremental_o3.md
db/: App.db  App.db.template
errors/: Cargo.toml
errors/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
migrations/: 20230226000000_create_todo_table.sql  20230226000000_create_user.sql  20230320223520_posts.sql  20260416000000_post_hero_and_raw_content.sql  20260417000000_add_toc_column.sql
models/: Cargo.toml
models/src/: lib.rs  post.rs
public/components/femark-wasi/: femark.core2.wasm  femark.d.ts  femark.js
public/components/femark-wasi/interfaces/: femark.d.ts  wasi-filesystem-types.d.ts  wasi-io-streams.d.ts
public/styles/: output.css
scripts/: benchmark.rs  refetch.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  auth.rs  error_template.rs  errors.rs  fallback.rs  js.rs  lib.rs  main.rs  rss.rs  session.rs  state.rs  telemetry.rs  todo.rs
src/components/: color_scheme.rs  dark_mode_toggle.rs  feature_card.rs  footer.rs  mod.rs  nav.rs  portfolio_card.rs
src/functions/: auth.rs  dark_mode.rs  file.rs  mod.rs  post.rs  todo.rs  user.rs
src/layouts/: default.rs  mod.rs
src/models/: mod.rs  post.rs  todo.rs  user.rs
src/providers/: auth.rs  color_scheme.rs  mod.rs
src/routes/: about.rs  index.rs  mod.rs  nedry.rs  portfolio.rs  rss.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  signup.rs
src/routes/blog/: add.rs  edit.rs  index.rs  mod.rs  post.rs
src/routes/todos/: list.rs  mod.rs
styles/: input.css  input.scss  output.css
