[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[workspace.dependencies]
# Leptos ecosystem
leptos = { version = "0.8.19", features = ["islands"] }
leptos_meta = "0.8.6"
leptos_router = "0.8.13"
leptos_axum = "0.8.9"
server_fn_macro = "0.8.10"

# Web/WASM
wasm-bindgen = "=0.2.118"
web-sys = { version = "0.3.95", features = ["HtmlDocument"] }
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
log = "0.4.29"
serde-wasm-bindgen = "0.6"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Server deps
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = "1.52.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
axum_session = "0.19.0"
axum_session_auth = "0.19.0"
axum_session_sqlx = { version = "0.8.0", features = ["sqlite"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
femark = "0.1"
rand = "0.10"
rand_core = "0.10"
dotenvy = "0.15.7"

# Common
anyhow = "1.0.102"
cfg-if = "1.0.4"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
http = "1"
miette = "7.6.0"
slug = "0.1.6"
thiserror = "2"
tracing = "0.1.44"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"

[profile.release-wasm-size]
inherits = "release"
lto = true
opt-level = 'z'
strip = true
codegen-units = 1

[[workspace.metadata.leptos]]
name = "benwis_leptos"
output-name = "benwis_leptos"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "styles/input.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
browserquery = "defaults"
watch = false
env = "DEV"
bin-package = "server"
lib-package = "frontend"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
bin-profile-release = "release"
lib-profile-release = "release-wasm-size"
