[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
models = {path="../models"}
errors = {path="../errors"}
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
chrono = "0.4.31"
indexmap = "2.1.0"
slug = "0.1.5"
serde = { version = "1.0.192", features = ["derive"] }
web-sys = { version = "0.3.64", features = ["HtmlDocument"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"], optional=true }
axum-extra = { version = "0.8.0", features = ["cookie"], optional=true }
axum = { workspace = true, optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "models/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:sqlx", "dep:axum-extra", "dep:axum", "models/ssr"]

