[package]
name = "app"
version = "0.2.0"
edition = "2024"

[dependencies]
# Leptos ecosystem
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
server_fn_macro = { workspace = true }

# Web/WASM
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Common
anyhow = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
slug = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum-extra = { workspace = true }

# SSR-only (optional)
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
femark = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
	"dep:axum",
	"dep:jemallocator",
	"dep:tower",
	"dep:dotenvy",
	"dep:tokio",
	"dep:tower-http",
	"dep:axum_session",
	"dep:axum_session_auth",
	"dep:axum_session_sqlx",
	"dep:async-trait",
	"dep:sqlx",
	"dep:argon2",
	"dep:femark",
	"dep:rand",
	"dep:rand_core",
	"leptos/ssr",
	"dep:leptos_axum",
	"server_fn_macro/ssr",
]

[package.metadata.cargo-all-features]
denylist = [
	"axum",
	"tower",
	"tower-http",
	"reqwest",
	"tokio",
	"sqlx",
	"leptos_axum",
	"femark",
	"argon2",
	"rand",
	"rand_core",
	"octocrab",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
