[package]
name = "benwis_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
models = {path = "../models", features = ["ssr"] }
errors = {path = "../errors", features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
leptos_router.workspace = true
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["reqwest-client", "http-proto"] }
tracing-opentelemetry = { version = "0.19.0" }
tracing = "0.1.37"
#tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.7" }
tracing-log = { version = "0.1.3" }
dotenvy = { version = "0.15.7" }
    hyper = { version = "0.14.27" }
    tracing-logfmt = { version = "0.3.2" }
reqwest = {version="0.11.18", default-features=false, features = ["rustls-tls"] }
octocrab = {version="0.30.1"}
sqlx = { version = "0.7.0", features = [
	"runtime-tokio-rustls",
	"sqlite",
]}
http.workspace = true
indexmap = "2.1.0"
xml = "0.8.10"
anyhow = "1.0.75"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = {version="0.5"}
